Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextInteger.quorum
text t = cast(text, 5)
output t