Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextObjInteger.quorum
Text t = cast(Text, 5)